@@ -16,7 +16,7 @@ exportMethods(prompt, show, .DollarNames, initialize, "formals<-")
 export(Module,
        Rcpp.package.skeleton,
        populate,
-       loadRcppModules,  # deprecated since Rcpp 0.12.5
+       loadRcppModules,  # deprecated since Rcpp 0.12.5 released May 2016
        setRcppClass,
        loadRcppClass,
        loadModule,
@@ -26,8 +26,8 @@ export(Module,
        sourceCpp,
        compileAttributes,
        registerPlugin,
-       RcppLdFlags,
-       LdFlags,
+       RcppLdFlags,	# deprecated since Rcpp 0.12.19 released Sep 2018
+       LdFlags,		# deprecated since Rcpp 0.12.19 released Sep 2018
        demangle,
        sizeof,
        cpp_object_initializer,
@@ -39,5 +39,3 @@ S3method(format, Rcpp_stack_trace)
 S3method(str, Rcpp_stack_trace)
 S3method(print, Rcpp_stack_trace)
 exportClass(RcppClass)
-
-
