@@ -1,16 +1,18 @@
-\name{LdFlags}
+\name{LdFlags-deprecated}
 \alias{LdFlags}
 \alias{RcppLdFlags}
-\title{(Deprecated) Rcpp Linker Flags}
+\title{Deprecated Rcpp Linker Flags}
 \description{
-  In previous versions of Rcpp, \code{LdFlags} and \code{RcppLdFlags}  
-  were used to return the required flags and options for the system linker to 
-  link to the Rcpp user library. Since we no longer build or ship a 
-  user library, these functions now return an empty string.
+  In Rcpp versions prior to release 0.10.1 of November 2013,
+  \code{LdFlags} and \code{RcppLdFlags} were used to return the required
+  flags and options for the system linker to link to the Rcpp user
+  library. Since we no longer build or ship a user library, these
+  functions now return an empty string. As of Rcpp release 0.12.19,
+  these functions are now deprecated.
 }
 \usage{
-LdFlags()
-RcppLdFlags()
+  LdFlags()
+  RcppLdFlags()
 }
 \value{
   An empty string.
